0.3 (unreleased)
----------------

- Support direct transmission of SQL queries to the SDSS server (#410)
- Added email/text job completion alert (#407) to the CosmoSim tool (#267).
- ESO archive now supports HARPS/FEROS reprocessed data queries (#412)


0.2 (2014-08-17)
----------------

- New tools: ESO, GAMA, xmatch, skyview, OEC
- Consistent with astropy 0.4 API for coordinates
- Now uses the astropy affiliated template
- Python 3 compatibility dramatically improved
- Caching added and enhanced: the default cache directory is
  ``~/.astropy/cache/astroquery/[service_name]``
- Services with separate login pages can be accessed


0.1 (2013-09-19)
----------------

- Initial release.  Includes features!