@@ -4,6 +4,8 @@
 - Support direct transmission of SQL queries to the SDSS server (#410)
 - Added email/text job completion alert (#407) to the CosmoSim tool (#267).
 - ESO archive now supports HARPS/FEROS reprocessed data queries (#412)
+- IPython notebook checker in the ESO tool is now compatible with regular
+  python (#413)
 
 
 0.2 (2014-08-17)
